# minicom2

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  app.desktop  check.ps1  check.sh  cli_options.cpp  cli_options.hpp  event.hpp  main.cpp  makefile  mingw-fix-boost-fiber-build.patch  mingw-fix-boost-stacktrace-gcc13.patch  sync_queue.hpp  xmake.lua
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  windows.yml
serial/: CMakeLists.txt  serial.hpp  serial_boost.cpp  serial_boost.hpp  serial_posix.cpp  serial_posix.hpp  serial_win32.cpp  serial_win32.hpp  xmake.lua
terminal/: CMakeLists.txt  terminal.hpp  terminal_posix.cpp  terminal_posix.hpp  terminal_win32.cpp  terminal_win32.hpp  xmake.lua
